apply plugin: 'com.android.application'

android {
    compileSdkVersion 28
    buildToolsVersion "29.0.3"

    defaultConfig {
        applicationId "org.transdroid.search"
        minSdkVersion 14
        targetSdkVersion 28
        versionCode 36
        versionName "4.0"
        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
    }

    sourceSets {
        main.java.srcDirs += 'src/external/java'
    }

    signingConfigs {
        releaseConfig {
            keyAlias 'erickok'
            keyPassword ''
            storeFile file('../../erickok.keystore')
            storePassword ''
        }
    }

    buildTypes {
        release {
            signingConfig signingConfigs.releaseConfig
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        encoding = 'UTF-8'
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    lintOptions {
        disable 'GoogleAppIndexingWarning'
    }

    useLibrary 'org.apache.http.legacy'
}

dependencies {
    implementation 'com.android.volley:volley:1.1.1'
    implementation 'org.jsoup:jsoup:1.13.1'

    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
    androidTestImplementation 'com.google.truth:truth:1.0.1'
}
